--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -122,7 +122,7 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px; /* Reduced gap */
+  gap: 20px; /* Increased gap between elements */
 }
 
 form .button {
@@ -167,16 +167,43 @@ input[type="file"]:hover {
   background-color: #7c1212;
 }
 
-/* Styling for the description input */
+/* Styling for the title input */
+input[type="text"] {
+  width: 80%;
+  max-width: 500px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 14px;
+  margin-bottom: 20px;
+  transition: border-color 0.3s ease;
+}
+
+input[type="text"]:focus {
+  border-color: #9D0000; /* Red border when focused */
+  outline: none;
+}
+
+input[type="text"]:hover {
+  border-color: #9D0000; /* Red border on hover */
+}
+
+/* Styling for the description textarea */
 textarea {
-  width: 80%; /* Adjust width */
+  width: 80%;
   max-width: 500px;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
   font-size: 14px;
   resize: vertical;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  transition: border-color 0.3s ease;
+}
+
+textarea:focus {
+  border-color: #9D0000; /* Red border when focused */
+  outline: none;
 }
 
 label {
