--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 body {
-  font-family: "Inter", sans-serif; /* Apply Inter font globally */
+  font-family: "Open Sans", Arial, sans-serif; /* Apply Inter font globally */
   text-align: center;
   margin-top: 50px;
   background-color: #f4f4f9; /* Soft background color */
@@ -10,7 +10,7 @@ body {
 }
 
 h1 {
-  font-family: "Inter", sans-serif; /* Apply Inter font */
+  font-family: "Open Sans", Arial, sans-serif; /* Apply Inter font */
   font-size: 2em;
   color: #9D0000; /* Red color for the title */
   text-transform: capitalize;
@@ -19,12 +19,12 @@ h1 {
 }
 
 p {
-  font-family: "Inter", sans-serif; /* Apply Inter font */
+  font-family: "Open Sans", Arial, sans-serif; /* Apply Inter font */
   font-size: 1.2em;
 }
 
 .sub {
-  font-family: "Inter", sans-serif; /* Apply Inter font */
+  font-family: "Open Sans", Arial, sans-serif; /* Apply Inter font */
   font-size: 0.8em;
 }
 
@@ -34,7 +34,7 @@ ul {
 }
 
 li {
-  font-family: "Inter", sans-serif; /* Apply Inter font */
+  font-family: "Open Sans", Arial, sans-serif; /* Apply Inter font */
   margin: 20px 0;
   display: flex;
   align-items: center;
@@ -61,7 +61,7 @@ li {
 }
 
 .file-title {
-  font-family: "Inter", sans-serif; /* Apply Inter font */
+  font-family: "Open Sans", Arial, sans-serif; /* Apply Inter font */
   font-size: 16px;
   font-weight: bold;
   margin-right: 20px;
@@ -117,11 +117,12 @@ img {
 }
 
 .file-description {
-  font-family: "Inter", sans-serif; /* Apply Inter font */
+  font-family: "Open Sans", Arial, sans-serif; /* Apply Inter font */
   font-size: 14px;
   color: #666;
   margin-top: 5px;
   font-style: italic; /* Optional: makes the description italic */
+  text-align: center;
 }
 
 form {
@@ -181,7 +182,7 @@ input[type="text"] {
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  font-family: "Inter", sans-serif; /* Use Inter font */
+  font-family: "Open Sans", Arial, sans-serif; /* Use Inter font */
   font-size: 14px;
   margin-bottom: 20px;
   transition: border-color 0.3s ease;
@@ -203,7 +204,7 @@ textarea {
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
-  font-family: "Inter", sans-serif; /* Use Inter font */
+  font-family: "Open Sans", Arial, sans-serif; /* Use Inter font */
   font-size: 14px;
   resize: vertical;
   margin-bottom: 20px;
@@ -216,7 +217,7 @@ textarea:focus {
 }
 
 label {
-  font-family: "Inter", sans-serif; /* Apply Inter font */
+  font-family: "Open Sans", Arial, sans-serif; /* Apply Inter font */
   font-size: 14px;
   margin-bottom: 5px;
   display: block;
